Added a table (openskyByDates) to flightpal.db. This makes quering for flight counts by airport for a given day much faster.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </head>
 
     <body>  
-        <script src="/lib/utility.js"></script> 
+        <script src="lib/utility.js"></script> 
         <script src="lib/d3.v5.min.js"></script>
        
 
