Cities page is almost complete. Maybe some quirks to fix.

--- a/index.html
+++ b/index.html
@@ -189,9 +189,13 @@
                     
                     <div class="loader"></div>     
             </form>
+            <div id = "select1"></div>
             <div id = "graph1"></div>
+            <div id = "select2"></div>
             <div id = "graph2"></div>
+            <div id = "select3"></div>
             <div id = "graph3"></div>
+            <div id = "select4"></div>
             <div id = "graph4"></div>
 
         </div>
