Adding worldcities.csv and fixed a bug in createDB.sql introduced in the last push.

--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
             {
                 hourlyData = data;
                 console.log(data[0]);
-                // searchData = searchHourlyData("2018-01-01", "KIAD");
-                // console.log(searchData);
+                searchData = searchHourlyData("2018-01-01", "KIAD");
+                console.log(searchData);
             });
 
             function searchHourlyData(date, departureAirport = undefined)
