--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
         
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Cities')" id="defaultOpen">Flights</button>
-            <button class="tablinks" onclick="openTab(event, 'Heatmap')">Heat Map</button>
+            <button class="tablinks" onclick="window.location.href= 'airports.html'/*openTab(event, 'Heatmap')*/">Heat Map</button>
+            <button class="tablinks" onclick="window.location.href= 'delay.html'/*openTab(event, 'Heatmap')*/">Flight Delay</button>
         </div>
         <!-- Tab content -->
         <div id="Cities" class="tabcontent">
